FEATURE: app menu 20s to lock display
FEATURE: stopwatch back button
FEATURE: allow apps to disable system lock after inactivity period (e.g. in stopwatch)
FEATURE: flashlight
REDESIGN: new set of app menu icons
REDESIGN: remove grasy tones from splash screen
BUGFIX: touch on blank space in menu do nothing (sshow empty screen before)
BUGFIX: correctly using of BMA423 irqs
REFACTOR: PEKShort on apps return to app menu by default instead of watch face
REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps
REFACTOR: AppMenu launching from watch faces by swipe up
REFACTOR: AppMenu exit to watch faces by swipe down
REFACTOR: settings screen buttons rendering with fillRoundRect instead circle+rect+circle

cyberWatch 1.2
========================
- FEATURE: new graphical logo
- FEATURE: vaporwave watch face
- FEATURE: lcars watch face
- FEATURE: logo watch face
- FEATURE: DeusEx watch face
- FEATURE: mosaic watch face
- REFACTOR: moved all watch faces into apps directory from userinterface
- REFACTOR: used defines for resolution width annd height instead tft->width() / height() calls
- REDACTOR: redesign analog watch face
- BUGFIX:when pekshort on alarm setting on after delete alarm > go back to alarm overview screen (was back on watch face before)
- REFACTOR: remove some unused classess
- REFACTOR: remove planetoid watch face

cyberWatch 1.1
========================
- FEATURE: apps menu
- FEATURE: apps can be controlled both vertical & horizontal swiping
- FEATURE: blank screen app when needed empty screen
- FEATURE: charging icon is charging || connected
- FEATURE: system info is standalone app accessible from app menu
- REFACTOR: watches faces changed by horizontal swipe inestead of vertical
- REFACTOR: renderTitle mehod in app
- REFACTOR: StopWatchRegistry class to store if stopwatch is running through whole app
- REFACTOR: remove unused AppRunner apps array ('cause apps are managed by app menu)