@@ -19,7 +19,7 @@ Display *Display::getInstance() {
 
 void Display::init() {
 	TTGOClass::getWatch()->openBL();
-	uint adjust = Registry::getInstance()->getValue(Registry::NAME_DISPLAY_ADJUST);
+	uint adjust = Registry::getInstance()->getValue(REGISTRY_DISPLAY_ADJUST, DISPLAY_ADJUST);
 	if (
 		(adjust > 0)
 		&& (adjust <= 100)
@@ -54,7 +54,7 @@ void Display::turnDisplayOn() {
 }
 
 void Display::setAdjust(uint8_t adjustPercent) {
-	Registry::getInstance()->setValue(Registry::NAME_DISPLAY_ADJUST, adjustPercent);
+	Registry::getInstance()->setValue(REGISTRY_DISPLAY_ADJUST, adjustPercent);
 	uint8_t adjust = ((ADJUST_MAX - ADJUST_MIN) * adjustPercent) / 100;
 	TTGOClass::getWatch()->bl->adjust(ADJUST_MIN + adjust);
 	this->adjustPercent = adjustPercent;
